# enumeration_tool

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  README.md
_old_/benchmark/: accumulation_benchmark.cpp  benchmark.cpp  division_benchmark.cpp  ltl_benchmark.cpp  ltl_grammar_benchmark.cpp  smt_benchmark.cpp
_old_/examples/: CMakeLists.txt  aig.hpp  ctl.cpp  ltl.cpp  ltl_enumeration_store.hpp  maj5_1.cpp  maj5_test.cpp  maj7.cpp  maj7.hpp  npn4.hpp  npn4_1.cpp  npn4_1.hpp  npn4_test.cpp  partial_dag.cpp  partial_enumeration.hpp  smt.cpp  xmg.cpp
benchmark/: CMakeLists.txt  accumulation_benchmark.cpp  division_benchmark.cpp  enumerator.hpp  increase_stack_benchmark.cpp  ltl_benchmark.cpp  ltl_grammar_benchmark.cpp  smt_benchmark.cpp
cmake/: FindGoogleBenchmark.cmake
examples/: CMakeLists.txt  aig.cpp  ctl.cpp  experiments.cpp  ltl.cpp  ltl_enumeration_store.hpp  maj5.cpp  maj5.hpp  maj5_test.hpp  npn4.cpp  npn4_test.hpp  partial_enumeration.cpp  partial_enumeration.hpp  smt.cpp  smt.hpp  xmg.cpp
experiments/: CMakeLists.txt  abc_comparison.cpp  check_circuits.cpp  cvc4_comparison.cpp  cvc4_comparison2.cpp  graphs_generation.hpp  isomorphisms.cpp  parallelization.cpp  partial_dag.cpp  results_enumeration_to_table.py
include/: ideas.txt
include/_old_/: direct_enumerator.hpp  enumerator.hpp  enumerator_old.hpp  indirect_enumerator.hpp  partial_dag_enumerator_parallel.hpp
include/enumeration_tool/: enumerator.hpp  enumerator_old.hpp  grammar.hpp  multi_signature_callable.hpp  symbol.hpp  utils.hpp
include/enumeration_tool/enumerator_engines/: direct_enumerator_partial_dag.hpp  partial_dag_enumerator.hpp  partial_dag_enumerator_parallel_v2.hpp  partial_dag_enumerator_test.hpp
include/enumeration_tool/enumerators/: aig_enumerator.hpp  direct_enumerator_partial_dag.hpp  mig_enumerator.hpp
include/enumeration_tool/partial_dag/: partial_dag.hpp  partial_dag3_generator.hpp  partial_dag_generator.hpp  spec.hpp  tt_utils.hpp
lib/: CMakeLists.txt
lib/copycat/copycat/: ltl.hpp
lib/ctl_formula/ctl_formula/: ctl_formula.hpp
lib/mockturtle/include/mockturtle/io/: write_aiger.hpp
lib/mockturtle/lib/: CMakeLists.txt
lib/mockturtle/lib/percy/percy/: dag_generation.hpp  partial_dag.hpp
lib/nauty/: .gitignore  configure  configure.ac  gtools.h  nausparse.h
lib/z3_expr/: CMakeLists.txt  main.cpp
lib/z3_expr/src/: CMakeLists.txt
lib/z3_expr/src/api/: CMakeLists.txt  api_config_params.cpp  api_context.cpp
lib/z3_expr/src/math/polynomial/: CMakeLists.txt
test/: CMakeLists.txt  enumerator.cpp  enumerator_old.cpp  partial_dag.cpp  partial_dag_enumerator.cpp
